stupid coach pictures

--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,2 +1,18 @@
-<p> <%=@answer%> </p>
-<p> <%= @coach %> </p>
+<p> <%@answer%> </p>
+<p> <%@coach%> </p>
+
+
+
+<div class="card p-1 mb-1 bg-dark text-white" style="width: 18rem;">
+  <img src="https://assets-cms.thescore.com/uploads/image/file/322980/w640xh480_GettyImages-1057320450.jpg?ts=1541446136" class="card-img-top" alt="player">
+  <div class="card-body">
+    <p class="card-text"><%=@answer%></p>
+  </div>
+</div>
+
+<div class="card p-1 mb-1 bg-light text-dark" style="width: 18rem;">
+  <img src="https://www.si.com/.image/t_share/MTY4MjU4Njg0Nzc1Mzc2NzY5/george-karl1jpg.jpg" class="card-img-top" alt="getbacktowork">
+  <div class="card-body">
+    <p class="card-text"><%=@coach%> </p>
+  </div>
+</div>
